--- a/parts/outro/fazit.tex
+++ b/parts/outro/fazit.tex
@@ -1,7 +1,5 @@
 \chapter{Fazit}
 \label{sec:fazit}
-\epigraph{Write the tests you wish you had. If you don't, you will eventually break something while refactoring. Then you'll get bad feelings about refactoring and stop doing it so much. Then your design will deteriorate. You'll be fired. Your dog will leave you. You will stop paying attention to your nutrition. Your teeth will go bad. So, to keep your teeth healthy retroactively test before refactoring.}{Kent Beck \citep{beck_test_2002}}
-
-In diesem abschließendem Kapitel werden erreichte Ergebnisse zusammengefasst und ein Ausblick für weitere Forschungen auf dem Gebiet der Testgetriebenen Entwicklung gegeben.
+\epigraph{Write the tests you wish you had. If you don't, you will eventually break something while refactoring. Then you'll get bad feelings about refactoring and stop doing it so much. Then your design will deteriorate. You'll be fired. Your dog will leave you. You will stop paying attention to your nutrition. Your teeth will go bad. So, to keep your teeth healthy retroactively test before refactoring.}{Kent Beck}
 
 \section{Zusammenfassung}
