--- a/parts/intro/preambel.tex
+++ b/parts/intro/preambel.tex
@@ -1,10 +1,4 @@
 \chapter*{Danksagung}
 
-Besonderen Dank gilt meinem Betreuer, Prof. Fritzsche, der sich regelmäßig und ausführlich mit meiner Arbeit beschäftigte und mir wertvolle Hinweise erteilte.
-
-Mein Dank gilt auch der Fakultät Informatik und Prof. Wiedemann für das zur Verfügung gestellte Büro, der Bibliothek der HTW-Dresden und Prof. Nestler für das Bestellen von tagesaktueller Literatur.
-
-Ich danke auch meiner Frau, die mich während des Schreibens unterstützt hat und bei der Erstellung der Grafiken Tipps gab. Für die orthografische und expressive Optimierung danke ich meinen Freunden und Kollegen Daniel Schäufele, Jörg Sachse, Martin Schneider, Akos Toth und Stefan Koch.
-
-Diese Arbeit entstand in Zusammenarbeit mit der Firma pludoni GmbH und unter Aufsicht des Geschäftsführers Dr. Jörg Klukas. Ich danke ihm für die Möglichkeit, frei zu arbeiten und viele neue Dinge auszuprobieren und für das Vertrauen, das er dabei in mich gesetzt hat.
+Besonderen Dank gilt meinem Betreuer, ...
 
